<resources>
    <string name="app_name">Football League</string>
    <string-array name="league_name">
        <item>English Premiere League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Portuguese Premeira Liga</item>
        <item>Australian A League</item>
        <item>Scottish Premiere League</item>
        <item>English League 1</item>
    </string-array>
    <string name="goal">GOAL</string>
    <string name="lineups">LINEUPS</string>
    <string name="sub">Substitutes</string>
    <string name="fwd">Forward</string>
    <string name="mid">Midfield</string>
    <string name="def">Defense</string>
    <string name="gk">Goal Keeper</string>
    <string name="strip">-</string>
    <string name="r">R</string>
    <string name="team">Team</string>
    <string name="p">P</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="gf">Gf</string>
    <string name="ga">Ga</string>
    <string name="gd">Gd</string>
    <string name="pt">Pt</string>
</resources>