<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.league.table.TableFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/team_rank"
            android:layout_width="16dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/r"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/team_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            tools:text="@string/app_name"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/team"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/team_rank"
            app:layout_constraintRight_toLeftOf="@id/team_played"/>

        <TextView
            android:id="@+id/team_point"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="@string/pt"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/team_goal_diff"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="@string/gd"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@id/team_point"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/team_goal_against"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="@string/ga"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@id/team_goal_diff"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/team_goal_for"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="@string/gf"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@id/team_goal_against"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/team_lose"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="@string/l"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@id/team_goal_for"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/team_draw"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="@string/d"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@id/team_lose"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/team_win"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="@string/w"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@id/team_draw"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/team_played"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="@string/p"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@id/team_win"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        tools:listitem="@layout/team_item"/>

</LinearLayout>