<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.event.EventActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/colorPrimary"/>

    <ImageView
        android:id="@+id/away_logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="fitXY"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/home_name"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/home_logo"
        app:layout_constraintRight_toRightOf="@id/home_logo"
        app:layout_constraintTop_toBottomOf="@id/home_logo"
        tools:text="@string/app_name"
        android:paddingTop="8dp"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@id/away_name"/>

    <TextView
        android:id="@+id/away_name"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/away_logo"
        app:layout_constraintRight_toRightOf="@+id/away_logo"
        app:layout_constraintTop_toBottomOf="@id/away_logo"
        tools:text="@string/app_name"
        android:paddingTop="8dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/home_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/home_logo"
        app:layout_constraintRight_toLeftOf="@+id/vs_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="5"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/away_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/away_logo"
        app:layout_constraintLeft_toRightOf="@id/vs_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="4"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/vs_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/home_logo"
        app:layout_constraintRight_toLeftOf="@id/away_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/strip"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/home_name"
        android:layout_marginTop="8dp"/>

    <GridLayout
        android:id="@+id/grid_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:columnCount="3"
        android:rowCount="1">

        <TextView
            android:id="@+id/home_goal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/away_goal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginTop="8dp"
            android:layout_columnWeight="1"/>

    </GridLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/grid_goal"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/lineup_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lineups"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lineup_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:columnCount="3"
        android:rowCount="5">

        <TextView android:id="@+id/home_gk"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"/>
        <TextView android:text="@string/gk"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"/>
        <TextView android:id="@+id/away_gk"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"/>

        <TextView android:id="@+id/home_def"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"/>
        <TextView android:text="@string/def"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"/>
        <TextView android:id="@+id/away_def"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"/>

        <TextView android:id="@+id/home_mid"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"/>
        <TextView android:text="@string/mid"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"/>
        <TextView android:id="@+id/away_mid"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"/>

        <TextView android:id="@+id/home_fwd"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"/>
        <TextView android:text="@string/fwd"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"/>
        <TextView android:id="@+id/away_fwd"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"/>

        <TextView android:id="@+id/home_sub"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"/>
        <TextView android:text="@string/sub"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"/>
        <TextView android:id="@+id/away_sub"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>